--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,22 +12,22 @@
 
 </head>
 
-<header>
-
-    <div class="topnav" id="myTopnav">
-        <a href="#home" class="active">
-            <%= title %>
-        </a>
-        <a href="#imp" class="extra">Important</a>
-        <a href="#about" class="extra">About</a>
-        <a href="javascript:void(0);" class="icon extra" onclick="myFunction()">
-            <i class="fa fa-bars"></i>
-        </a>
-    </div>
-</header>
-
 
 <body>
+
+    <header>
+
+        <div class="topnav" id="myTopnav">
+            <a href="/" class="active">
+                <%= title %>
+            </a>
+            <a href="#imp" class="extra">Important</a>
+            <a href="/about" class="extra">About</a>
+            <a href="javascript:void(0);" class="icon extra" onclick="myFunction()">
+                <i class="fa fa-bars"></i>
+            </a>
+        </div>
+    </header>
     <main>
         <div>
             <div id="heading">
