--- a/views/home.ejs
+++ b/views/home.ejs
@@ -62,7 +62,7 @@
                         <hr>
                         <div id="dueDate">
                             <label for="due">DUE DATE</label>
-                            <input type="text/number" name="date" id="due" placeholder="dd/mm/yyyy">
+                            <input type="date" name="date" id="due">
                         </div>
                     </div>
                     <hr>
@@ -111,6 +111,7 @@
     </main>
 
     <script src="/js/home.js"></script>
+
 </body>
 
 </html>
