--- a/views/about.ejs
+++ b/views/about.ejs
@@ -29,7 +29,7 @@
     <br>
     <div style="margin-top: 7%; text-align: center; font-size: 1.2rem;">
         <h1>ToDo App</h1>
-        <p style="text-align: justify; width: 80%; margin-left: 10%;">It's a basic todo application that let user to create its daily task. Now you can create your daily remainder with this web application and never forget to complete your task on time :)</p>
+        <p style="text-align: justify; width: 80%; margin-left: 10%;">It's a basic todo application that let user to create its daily task remainder. Now you can create your daily remainder with this web application and never forget to complete your task on time :)</p>
         <br>
         <div>
             <h2>For website related Issues:</h2>
